RESOLVED FIXED204641
SWServer::scriptFetchFinished does not need a Connection as parameter
https://bugs.webkit.org/show_bug.cgi?id=204641
Summary SWServer::scriptFetchFinished does not need a Connection as parameter
youenn fablet
Reported 2019-11-27 05:21:42 PST
SWServer::scriptFetchFinished does not need a Connection as parameter
Attachments
Patch (7.75 KB, patch)
2019-11-27 05:22 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-11-27 05:22:58 PST
Radar WebKit Bug Importer
Comment 2 2019-12-02 01:08:54 PST
WebKit Commit Bot
Comment 3 2019-12-02 09:25:32 PST
Comment on attachment 384410 [details] Patch Clearing flags on attachment: 384410 Committed r252986: <https://trac.webkit.org/changeset/252986>
WebKit Commit Bot
Comment 4 2019-12-02 09:25:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.