SWServer::scriptFetchFinished does not need a Connection as parameter https://bugs.webkit.org/show_bug.cgi?id=204641

Reviewed by Chris Dumez.

No change of behavior, removing an unused parameter.

* workers/service/server/SWServer.cpp:
(WebCore::SWServer::Connection::finishFetchingScriptInServer):
(WebCore::SWServer::startScriptFetch):
(WebCore::SWServer::didResolveRegistrationPromise):
* workers/service/server/SWServer.h:
* workers/service/server/SWServerJobQueue.cpp:
(WebCore::SWServerJobQueue::scriptFetchFinished):
* workers/service/server/SWServerJobQueue.h:


Canonical link: https://commits.webkit.org/217959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252986 268f45cc-cd09-0410-ab3c-d52691b4dbfc